# forgeflow

./: .env.example  .env.production.example  .gitignore  .gitleaks.toml  .lintstagedrc.js  .pre-commit-config.yaml  .vercelignore  CLAUDE.md  Makefile  PHASE5_CHECKLIST.md  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
apps/api/: Dockerfile  Makefile  alembic.ini  pyproject.toml  start_api.bat
apps/api/scripts/: check_thresholds.py  onboard_tenant.py  seed_data.py  seed_policies.py
apps/api/src/forgeflow/: __init__.py  main.py
apps/api/src/forgeflow/agent/: __init__.py  graph.py  prompts.py  retry_config.py  service.py  state.py
apps/api/src/forgeflow/agent/nodes/: __init__.py  decision.py  error_handler.py  execute.py  intent.py  logistics.py  order_lookup.py  policy.py
apps/api/src/forgeflow/api/: __init__.py  router.py
apps/api/src/forgeflow/api/v1/: __init__.py  auth.py  gdpr.py  health.py  policies.py  prompts.py  tickets.py  webhooks.py  ws.py
apps/api/src/forgeflow/core/: __init__.py  config.py  constants.py  exceptions.py  security.py
apps/api/src/forgeflow/crud/: __init__.py  policy.py  shopify_session.py  ticket.py
apps/api/src/forgeflow/db/: __init__.py  base.py  engine.py  session.py
apps/api/src/forgeflow/db/alembic/: env.py
apps/api/src/forgeflow/llm/: __init__.py  base.py  fallbacks.py  resilience.py  router.py
apps/api/src/forgeflow/llm/providers/: __init__.py  anthropic_provider.py  deepseek_provider.py  openai_provider.py  qwen_provider.py
apps/api/src/forgeflow/messaging/: __init__.py  templates.py
apps/api/src/forgeflow/middleware/: __init__.py  auth.py  metrics.py  rate_limit.py  request_id.py  tenant.py
apps/api/src/forgeflow/models/: __init__.py  agent_log.py  audit_log.py  customer.py  llm_call.py  notification.py  order.py  policy_document.py  prompt_version.py  shopify_session.py  ticket.py
apps/api/src/forgeflow/monitoring/: __init__.py  cost_tracker.py  drift.py  logger.py  metrics.py  sentry_setup.py  tracing.py
apps/api/src/forgeflow/prompts/: __init__.py  registry.py  regression.py
apps/api/src/forgeflow/providers/: __init__.py  base.py  dto.py  mock.py  registry.py
apps/api/src/forgeflow/providers/amazon/: __init__.py  auth.py  (+1 more)
apps/api/src/forgeflow/schemas/: __init__.py  common.py  policy.py  shopify_oauth.py  ticket.py
apps/api/src/forgeflow/security/: __init__.py  audit.py  encryption.py  masking.py  rls.py
apps/api/src/forgeflow/services/: __init__.py  shopify_oauth.py  shopify_webhooks.py
apps/api/src/forgeflow/worker/: __init__.py  tasks.py
apps/api/tests/: __init__.py  conftest.py  test_amazon_auth.py  test_amazon_provider.py  test_gdpr_webhooks.py  test_health.py  test_hybrid_search.py  test_messaging.py  test_notifications.py  test_shopify_webhooks.py  test_shopify_webhooks_e2e.py  test_webhook_hmac.py
apps/api/tests/agent/: __init__.py  test_decision_node.py  test_end_to_end.py  test_intent_node.py  test_shopify_e2e.py
apps/api/tests/crud/: test_hybrid_search.py
apps/api/tests/evaluation/: __init__.py  benchmark.py  decision_evaluator.py  intent_evaluator.py  metrics.py  prompt_runner.py
apps/api/tests/evaluation/golden/: __init__.py  report.json  runner.py
(+119 files in other folders)
