[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forgeflow"]

[project]
name = "forgeflow-api"
version = "0.1.0"
description = "ForgeFlow AI - Backend API"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.32",

    # Database
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pgvector>=0.3,<1.0",

    # Validation & Settings
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",

    # Cache & Queue
    "redis>=5.0,<6.0",
    "celery>=5.4,<6.0",

    # HTTP & Resilience
    "httpx>=0.27,<1.0",
    "tenacity>=8.5,<9.0",

    # Auth
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",

    # LLM Providers
    "openai>=1.50,<2.0",
    "anthropic>=0.40,<1.0",

    # LangChain (for LangGraph integration in Phase 1)
    "langchain-core>=0.3,<0.4",
    "langgraph>=0.2,<0.5",

    # Observability
    "structlog>=24.0,<25.0",
    "opentelemetry-api>=1.27,<2.0",
    "opentelemetry-sdk>=1.27,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27,<2.0",
    "sentry-sdk[fastapi]>=2.15,<3.0",
    "prometheus-client>=0.20,<1.0",

    # Utilities
    "python-multipart>=0.0.9,<1.0",
    "email-validator>=2.1,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "pre-commit>=3.8,<4.0",
]

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pyflakes + pycodestyle
    "I",               # isort
    "N",               # pep8-naming
    "UP",              # pyupgrade
    "B",               # flake8-bugbear
    "SIM",             # flake8-simplify
    "C4",              # flake8-comprehensions
    "RUF",             # ruff-specific rules
]
ignore = ["E501"]      # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["forgeflow"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/forgeflow"]
omit = ["src/forgeflow/db/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
